# cloud-data-quality

./: .bazelrc  .gcloudignore  .gitignore  BUILD  CHANGES.md  CONTRIBUTING.md  Dockerfile  Makefile  OVERVIEW.md  README.md  REFERENCE.md  USERMANUAL.md  WORKSPACE  cloudbuild-build-image.yaml  cloudbuild-release-debian11.yaml  cloudbuild-release-ubuntu18.yaml  cloudbuild-release.yaml  cloudbuild.yaml  dataplex-submit-dataproc-job.sh  dbt_project.yml  profiles.yml.template  pyproject.toml  requirements.txt  set_environment_variables.sh  setup.py
.github/workflows/: build-test.yml  cflite_pr.yml  codeql-analysis.yml
clouddq/: BUILD  __main__.py  bigquery_client.py  bigquery_utils.py  dbt_runner.py  lib.py  log.py  logging.py  main.py  utils.py
clouddq/classes/: __init__.py  bigquery_client.py  dataplex_entity.py  dataplex_entity_schema.py  dataplex_entity_schema_field.py  dataplex_entity_schema_partition_fields.py  dq_config_type.py  dq_configs_cache.py  dq_entity.py  dq_entity_column.py  dq_entity_uri.py  dq_reference_columns.py  dq_row_filter.py  dq_rule.py  dq_rule_binding.py  dq_rule_dimensions.py  dq_target_table_utils.py  dry_run_bigquery.py  dry_run_client.py  entity_uri_schemes.py  metadata_registry_defaults.py  rule_type.py
clouddq/integration/: __init__.py  bigquery_client.py  clouddq_pyspark_driver.py  dataplex_client.py  dq_dataplex.py  gcp_credentials.py  gcs.py  spark_cloudq_pyspark_driver.py  test_clouddq_pyspark_driver.py  test_spark_clouddq_pyspark_driver.py
clouddq/integration/bigquery/: bigquery_client.py  dq_target_table_utils.py
clouddq/integration/dataplex/: clouddq_dataplex.py  (+3 more)
clouddq/templates/: dbt_project.yml
configs/: metadata_registry_defaults.yml  rule_dimensions.yml
configs/entities/: test-data.yml
configs/reference_columns/: reference-columns.yml
configs/row_filters/: row-filters.yml
configs/rule_bindings/: dq-summary-table-rule-bindings.yml  team-1-rule-bindings.yml  team-2-rule-bindings.yml  team-3-rule-bindings.yml  team-4-rule-bindings.yml
configs/rules/: base-rules.yml  complex-rules.yml
dbt/: dbt_project.yml
dbt/macros/: run_dq_main.sql
docs/: clouddq-as-dataproc-workflow-composer-dag.md  create-custom-rule-bindings-with-dataplex.md  getting-started-with-default-configs.md  submit-clouddq-as-dataproc-job.md  wip.sh
docs/examples/: aggregate_conditions.yaml  business_logic.yaml  foreign_key_constraint.yaml  reference_subquery.yaml  referential_integrity.yaml  row_by_row.yaml  set_based.yaml
macros/: macros.sql  run_dq_main.sql
scripts/: bazel_test.sh  bazel_test.sh~  build_addlicense.sh  build_bazel.sh  cloud-build-local.sh  cloud_build_debian11.sh  cloud_build_test_custom_image.sh  cloud_build_test_debian.sh  cloud_build_test_debian_ubuntu.sh  cloud_build_test_ubuntu.sh  cloud_build_ubuntu18.sh  common.sh  env.sh  fix_bazel_zip.sh  init-action.sh  install_development_dependencies.sh  install_gcloud.sh  install_python3.9.sh  install_python3.sh  poetry_install.sh  prepare_release_artifacts.sh  smoke_test_pip_install.sh  test_dataplex_integration_install.sh  test_pip_install.sh
scripts/dataproc/: clouddq_pyspark_driver.py  dataproc-init-action.sh  submit-dataproc-job.sh
scripts/dataproc-workflow-composer/: clouddq_composer_dataplex_task_job.py  clouddq_composer_dataproc_workflow_job.py  dataproc_workflow_template.yaml  upload_clouddq_to_gcs.sh
tests/: BUILD  compiler_version_test.py  conftest.py  test_bigquery_dry_run_client.py  test_classes.py  test_cli.py  test_dataplex_clouddq_task_integration.py  test_dbt_bigquery.py  test_templates.py
tests/data/: contact_details.csv
tests/integration/: test_advanced_dq_rules.py  test_bigquery_client.py  test_bigquery_dry_run_client.py  test_cli_integration.py  test_dataplex_clouddq_task_integration.py  test_dataplex_dq_configs_cache.py  test_dataplex_integration_performance.py  test_dataplex_metadata.py  test_dataplex_metadata_uri_templates.py  test_dataplex_spark_task.py  test_dataplex_task.py  test_dbt_bigquery.py  test_dq_configs_cache.py  test_dq_rules.py  test_metadata_uri_templates.py  test_reference_columns.py  test_spark_dq_rules.py
tests/resources/: bq_native_default_partitioned_expected_configs.json  bq_native_default_partitioned_sql_expected.sql  bq_native_expected_configs.json  bq_native_partitioned_expected_configs.json  bq_native_partitioned_sql_expected.sql  bq_native_sql_expected.sql  configs.yml  configs_100_rules.yml  configs_16_rb_10_rules.yml  configs_invalid.yml  dataplex_gcs_metadata_expected_configs.json  dataplex_gcs_metadata_sql_expected.sql  dataplex_gcs_partitioned_metadata_expected_configs.json  dataplex_gcs_partitioned_metadata_sql_expected.sql  dataplex_metadata_configs_file_expected_configs.json  dataplex_metadata_configs_file_sql_expected.sql  dataplex_metadata_expected_configs.json  dataplex_metadata_sql_expected.sql  dp_metadata_sql_expected.sql  dq_advanced_rules_configs.yml  dq_advanced_rules_expected_results.json  dq_reference_configs.yml  dq_rules_configs.yml  dq_rules_expected_results.json  expected_configs.json  expected_entity_summary_model.sql  expected_results.csv  expected_test_profiles.yml  mock_invalid_dataplex_entity.json  mock_valid_dataplex_entity.json  spark_dq_rules_configs.yml  spark_dq_rules_expected_results.json  test_dq_row_filter_params_sql_expected.sql  test_reference_columns_expected_configs.json  test_reference_columns_expected_gcs_configs.json  test_reference_columns_expected_partitioned_gcs_configs.json  test_reference_columns_gcs_partitioned_sql_expected.sql  test_reference_columns_gcs_sql_expected.sql  test_reference_columns_sql_expected.sql  test_render_run_dq_main_sql_expected.sql  (+2 more)
tests/unit/: test_classes.py  test_cli_unit.py  test_dataplex_entity.py  test_dbt_runner.py  test_dq_configs_cache.py  test_dq_row_filter_params.py  test_entity_uri.py  test_lib.py  test_metadata_registry_defaults.py  test_metadata_uri.py  test_metadata_uri_templates.py  test_templates.py  test_utils.py
tools/lint/: BUILD  black_python.py  flake8_python.py  isort_python.py  lint.bzl  lint.tpl  pyupgrade_python.py
(+73 files in other folders)
